# ordinalize

./: Cargo.toml
src/: lib.rs
tests/: ordinal.rs
