[package]
name = "ordinalizer"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Derive an ordinal function for enums which returns the index of a variant in the enum definition."
documentation = "https://docs.rs/ordinalize"
homepage = "https://github.com/caelunshun/ordinalize"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
